template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualNetworks_dpGroup_vnet_name": {
            "defaultValue": "dpGroup-vnet",
            "type": "String"
        },
        "accounts_dpgroupdatalake_name": {
            "defaultValue": "dpgroupdatalake",
            "type": "String"
        },
        "virtualMachines_dpgroupvmpipeline_name": {
            "defaultValue": "dpgroupvmpipeline",
            "type": "String"
        },
        "networkInterfaces_dpgroupvmpipeline774_name": {
            "defaultValue": "dpgroupvmpipeline774",
            "type": "String"
        },
        "publicIPAddresses_dpgroupvmpipeline_ip_name": {
            "defaultValue": "dpgroupvmpipeline-ip",
            "type": "String"
        },
        "networkSecurityGroups_dpgroupvmpipeline_nsg_name": {
            "defaultValue": "dpgroupvmpipeline-nsg",
            "type": "String"
        },
        "subnets_default_name": {
            "defaultValue": "default",
            "type": "String"
        },
        "schedules_shutdown_computevm_dpgroupvmpipeline_name": {
            "defaultValue": "shutdown-computevm-dpgroupvmpipeline",
            "type": "String"
        },
        "disks_dpgroupvmpipeline_OsDisk_1_45a0d516242a44769744e1baecfddfe9_name": {
            "defaultValue": "dpgroupvmpipeline_OsDisk_1_45a0d516242a44769744e1baecfddfe9",
            "type": "String"
        },
        "securityRules_default_allow_ssh_name": {
            "defaultValue": "default-allow-ssh",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/58b2fa58-64e0-4581-a6bf-154c12467e7a/resourceGroups/dpGroup/providers/Microsoft.Compute/disks/dpgroupvmpipeline_OsDisk_1_45a0d516242a44769744e1baecfddfe9'.",
            "type": "Microsoft.Compute/disks",
            "name": "[parameters('disks_dpgroupvmpipeline_OsDisk_1_45a0d516242a44769744e1baecfddfe9_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "westeurope",
            "scale": null,
            "properties": {
                "accountType": "Premium_LRS",
                "osType": "Linux",
                "creationData": {
                    "createOption": "FromImage",
                    "imageReference": {
                        "id": "/Subscriptions/58b2fa58-64e0-4581-a6bf-154c12467e7a/Providers/Microsoft.Compute/Locations/westeurope/Publishers/Canonical/ArtifactTypes/VMImage/Offers/UbuntuServer/Skus/16.04-LTS/Versions/latest"
                    }
                },
                "diskSizeGB": 30
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/58b2fa58-64e0-4581-a6bf-154c12467e7a/resourceGroups/dpGroup/providers/Microsoft.Compute/virtualMachines/dpgroupvmpipeline'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_dpgroupvmpipeline_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "westeurope",
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "16.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_dpgroupvmpipeline_name'),'_OsDisk_1_45a0d516242a44769744e1baecfddfe9')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "id": "[resourceId('Microsoft.Compute/disks', parameters('disks_dpgroupvmpipeline_OsDisk_1_45a0d516242a44769744e1baecfddfe9_name'))]"
                        }
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_dpgroupvmpipeline_name')]",
                    "adminUsername": "dpgroup",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_dpgroupvmpipeline774_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "https://gdlethereumdiag226.blob.core.windows.net/"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/disks', parameters('disks_dpgroupvmpipeline_OsDisk_1_45a0d516242a44769744e1baecfddfe9_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_dpgroupvmpipeline774_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/58b2fa58-64e0-4581-a6bf-154c12467e7a/resourceGroups/dpGroup/providers/Microsoft.DataLakeStore/accounts/dpgroupdatalake'.",
            "type": "Microsoft.DataLakeStore/accounts",
            "name": "[parameters('accounts_dpgroupdatalake_name')]",
            "apiVersion": "2015-10-01-preview",
            "location": "northeurope",
            "scale": null,
            "properties": {},
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/58b2fa58-64e0-4581-a6bf-154c12467e7a/resourcegroups/dpgroup/providers/microsoft.devtestlab/schedules/shutdown-computevm-dpgroupvmpipeline'.",
            "type": "microsoft.devtestlab/schedules",
            "name": "[parameters('schedules_shutdown_computevm_dpgroupvmpipeline_name')]",
            "apiVersion": "2016-05-15",
            "location": "westeurope",
            "scale": null,
            "properties": {
                "status": "Enabled",
                "taskType": "ComputeVmShutdownTask",
                "dailyRecurrence": {
                    "time": "1900"
                },
                "timeZoneId": "UTC",
                "notificationSettings": {
                    "status": "Disabled",
                    "timeInMinutes": 30
                },
                "targetResourceId": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_dpgroupvmpipeline_name'))]",
                "provisioningState": "Succeeded",
                "uniqueIdentifier": "27e33f89-3fef-47d5-82e8-98514011841f"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_dpgroupvmpipeline_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/58b2fa58-64e0-4581-a6bf-154c12467e7a/resourceGroups/dpGroup/providers/Microsoft.Network/networkInterfaces/dpgroupvmpipeline774'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_dpgroupvmpipeline774_name')]",
            "apiVersion": "2017-06-01",
            "location": "westeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "291853d5-627c-49f4-aba1-a4f6c01d59df",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"9f99d515-b832-41ce-b0d4-c56beab5db58\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.1.2.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_dpgroupvmpipeline_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_dpGroup_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_dpgroupvmpipeline_nsg_name'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_dpgroupvmpipeline_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_dpgroupvmpipeline_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_dpGroup_vnet_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_dpgroupvmpipeline_nsg_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_dpgroupvmpipeline_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/58b2fa58-64e0-4581-a6bf-154c12467e7a/resourceGroups/dpGroup/providers/Microsoft.Network/networkSecurityGroups/dpgroupvmpipeline-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_dpgroupvmpipeline_nsg_name')]",
            "apiVersion": "2017-06-01",
            "location": "westeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "6f85e705-0dcc-4dc4-aa0a-84b8aa4cecab",
                "securityRules": [
                    {
                        "name": "default-allow-ssh",
                        "etag": "W/\"4f99565d-2e60-4362-9bb2-31cb1194c4c2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"4f99565d-2e60-4362-9bb2-31cb1194c4c2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"4f99565d-2e60-4362-9bb2-31cb1194c4c2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"4f99565d-2e60-4362-9bb2-31cb1194c4c2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"4f99565d-2e60-4362-9bb2-31cb1194c4c2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"4f99565d-2e60-4362-9bb2-31cb1194c4c2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"4f99565d-2e60-4362-9bb2-31cb1194c4c2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/58b2fa58-64e0-4581-a6bf-154c12467e7a/resourceGroups/dpGroup/providers/Microsoft.Network/publicIPAddresses/dpgroupvmpipeline-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_dpgroupvmpipeline_ip_name')]",
            "apiVersion": "2017-06-01",
            "location": "westeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "6914e4d9-141a-452f-95f9-255be88ac8ce",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/58b2fa58-64e0-4581-a6bf-154c12467e7a/resourceGroups/dpGroup/providers/Microsoft.Network/virtualNetworks/dpGroup-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_dpGroup_vnet_name')]",
            "apiVersion": "2017-06-01",
            "location": "westeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "03dce295-c532-4674-9cbc-d56739ae990e",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.1.2.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "etag": "W/\"563f142f-d247-4cb3-be50-779d6ec9f69a\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.1.2.0/24"
                        }
                    }
                ],
                "virtualNetworkPeerings": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/58b2fa58-64e0-4581-a6bf-154c12467e7a/resourceGroups/dpGroup/providers/Microsoft.Network/networkSecurityGroups/dpgroupvmpipeline-nsg/securityRules/default-allow-ssh'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_dpgroupvmpipeline_nsg_name'), '/', parameters('securityRules_default_allow_ssh_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_dpgroupvmpipeline_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/58b2fa58-64e0-4581-a6bf-154c12467e7a/resourceGroups/dpGroup/providers/Microsoft.Network/virtualNetworks/dpGroup-vnet/subnets/default'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_dpGroup_vnet_name'), '/', parameters('subnets_default_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.1.2.0/24"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_dpGroup_vnet_name'))]"
            ]
        }
    ]
}
